[package]
name = "candle_tu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.4.1"
candle-datasets ="0.4.1"
candle-nn = "0.4.1"
polars = { version = "0.36.2", features = ["ndarray","to_dummies","lazy","describe","strings","list_count","describe","cov"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
ndarray = "0.15.6"
