[package]
name = "candle_tu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle-core  = { version = "0.5.1", features = ["metal"] }

candle-nn = "0.5.1"
polars = { version = "0.41.2", features = ["lazy"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
ndarray = "0.15.6"
rand = "0.8.5"